# ardrone_autonomy

./: CMakeLists.txt  README.md  package.xml
ARDroneLib/Soft/Common/: ardrone_api.h
ARDroneLib/VP_SDK/VP_Com/: vp_com_socket.c
